@@ -1,3 +1,8 @@
+2013-12-14   H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/59492
+	* g++.dg/other/pr59492.C: New file.
+
 2013-12-14  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* g++.dg/cilk-plus/cilk-plus.exp: Fix last change.
